style.css
@font-face {
    font-family: 'Nunito-Regular';
    src: url('fonts/Nunito-Regular.ttf') format('truetype');
    font-weight: 400;
    font-style: normal;
}
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: 'Nunito-Regular', serif;
}
body {
    transition: 0.5s ease;
}
body.basic {
    background-color: #CD5656;
    color: #EAEBD0;
}
body.dark {
    background-color: black;
    color: #DDDDDD;
}
body.blue {
    background-color: #006A71;
    color: #DDDDDD;
}
.icons {
    height: 26px;
}
/* first line*/
.first-container {
    display: flex;
    justify-content: center;
}
.first-line {
    display: inline-flex;
    align-items: center;
    gap: 20px;
    margin-top: 20px;
}
.settings, .sign-in{
    display: inline-flex;
    gap: 10px;
    vertical-align: baseline;
    font-size: 25px;
    background-color: rgba(234, 235, 216, 0.3);
    height: 45px;
    width: 150px;
    border-radius: 5px;
    padding: 10px;
    align-items: center;
    cursor: pointer;
}
.three-dots {
    background-color: rgba(234, 235, 216, 0.3);
    border-radius: 5px;
    padding: 10px;
    cursor: pointer;
}
.first-line-name {
    display: inline-flex;
    gap: 10px;
    margin-left: -450px;
}
.name-icon {
    height: 48px;
}
.pomodoro-name {
    font-weight: 900;
    font-size: 35px;
}
/* red line */
.red-line {
    margin-top: 30px;
    margin-left: auto;
    margin-right: auto;
    height: 3px;
    width: 60%;
    display: flex;
    justify-content: center;
    align-items: center;
}
.red-line.basic {
    background-color: rgb(175, 62, 62, 0.3);
}
.red-line.dark {
    background-color: #30302f;
}
.red-line.blue {
    background-color: #48A6A7;
}
/* main container */
.main-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 40px;
    border-radius: 10px;
    width: 50%;
    max-width: 800px;
    justify-content: center;
    margin-left: auto;
    margin-right: auto;
    height: 350px;
}
.main-container.basic {
    background-color: rgb(218, 108, 108, 0.8);
}
.main-container.dark {
    background-color: #30302f;
}
.main-container.blue {
    background-color: #48A6A7;
}
.navi {
    display: inline-flex;
    gap: 40px;
    font-size: 30px;
}
.pomodoro-navi {
    border-radius: 10px;
    padding: 10px 20px;
    cursor: pointer;
}
.pomodoro-navi.basic {
    background-color: rgb(175, 62, 62, 0.8);
}
.pomodoro-navi.dark {
    background-color: black;
}
.pomodoro-navi.blue {
    background-color: #006A71;
}
.counter {
    display: flex;
    font-size: 100px;
    font-weight: bold;
}
.button-start {
    border-radius: 10px;
    height: 85px;
    width: 275px;
    font-size: 50px;
    font-weight: bold;
    justify-content: center;
    display: flex;
    padding: 5px 10px;
    cursor: pointer;
    transition: transform 0.2s ease;
}
.button-start.basic {
    background-color: rgb(234, 235, 208);
    color: #CD5656;
}
.button-start.dark {
    background-color: black;
    color: #DDDDDD;
}
.button-start.blue {
    background-color: #48A6A7;
    color: #DDDDDD;
}
.button-start:hover {
    transform: scale(1.05);
}
.short-navi, .long-navi {
    cursor: pointer;
}
.buttons {
    display: inline-flex;
    gap: 40px;
}
.button-reset {
    border-radius: 10px;
    height: 85px;
    width: 275px;
    font-size: 50px;
    font-weight: bold;
    justify-content: center;
    padding: 5px 10px;
    cursor: pointer;
    transition: transform 0.2s ease;
    text-align: center;
}
.button-reset:hover {
    transform: scale(1.05);
}
.button-reset.basic {
    background-color: rgb(234, 235, 208);
    color: #CD5656;
}
.button-reset.dark {
    background-color: black;
    color: #DDDDDD;
}
.button-reset.blue {
    background-color: #48A6A7;
    color: #DDDDDD;
}

